Fixed default search, page name, banner font spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,14 @@
 }
 
 /* Product Title */
+.title-text-dec-none  {
+  color: black;
+  text-decoration: none;
+  &:hover {
+  color: black;
+  text-decoration: none;
+  }
+}
 
 #brand-logo {
   display:flex;
